# nbody-rs

./: .gitignore  Cargo.toml  README.md  index.html
crates/nbody-core/: Cargo.toml
crates/nbody-core/src/: body.rs  lib.rs  render.rs  simulation.rs  tree.rs
crates/nbody-native/: Cargo.toml
crates/nbody-native/src/: fileio.rs  main.rs
crates/nbody-wasm/: Cargo.toml
crates/nbody-wasm/src/: lib.rs
pkg/: nbody_wasm.d.ts  nbody_wasm.js  nbody_wasm_bg.wasm  nbody_wasm_bg.wasm.d.ts  package.json
src/: body.rs  fileio.rs  main.rs  render.rs  simulation.rs  tree.rs
www/: index.html
