[package]
name = "nbody-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"     # For parallel iterators (replacing OpenMP)
glutin = "0.30"  # Not 0.32
winit = "0.28"   # Not 0.30
glutin-winit = "0.3"  # Not 0.5
gl = "0.14"       # OpenGL bindings
raw-window-handle = "0.5"  # Window handle types
rand = "0.8"      # For random number generation
clap = { version = "4.4", features = ["derive", "color"] }  # CLI argument parsing
console = "0.15"  # Terminal styling

[dev-dependencies]
tempfile = "3.8"  # For temporary files in tests

[[bin]]
name = "nbody"
path = "src/main.rs"
