[workspace]
members = [
    "crates/nbody-core",
    "crates/nbody-native",
    "crates/nbody-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Performance",
    "console",
]}
js-sys = "0.3"
rayon = "1.8"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console = "0.15"
winit = "0.28"
raw-window-handle = "0.5"
clap = { version = "4.4", features = ["derive"] }
glow = "0.12"  # Cross-platform GL bindings that work for both native and web