[workspace]
members = [
    "crates/nbody-core",
    "crates/nbody-native",
    "crates/nbody-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependencies but without features
[workspace.dependencies]
glow = "0.15"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
rayon = "1.8"
rand = "0.8"
getrandom = "0.2"
console = "0.15"
winit = "0.28"
raw-window-handle = "0.5"
clap = { version = "4.4", features = ["derive"] }