[package]
name = "nbody-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nbody-core = { path = "../nbody-core", default-features = false }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
glow = { workspace = true }
console_error_panic_hook = "0.1"  # Add this for better error handling
getrandom = { version = "0.2", features = ["js"] }  # Required for rand in WASM

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]